--- a/dev/index.html
+++ b/dev/index.html
@@ -57,7 +57,12 @@
       <div id="overlayContent"></div>
     </div>
     
-
+    <script>
+      window.addEventListener('load', () => {
+          const logo = document.querySelector('#world-logo');
+          logo.classList.add('loaded-img');
+      });
+    </script> 
   </body>
 
 </html>
